[project]
name = "ya-22"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.135.1",
    "itsdangerous>=2.2.0",
    "psutil>=6.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
